syntax = "proto3";

package example;

option go_package = ".;pb";

service Nested {
    rpc Get (NestedRequest) returns (NestedResponse);
    rpc GetDeep (DeepRequest) returns (NestedResponse);
    rpc GetOneOf (OneOfRequest) returns (NestedResponse);
    rpc GetOneOfDeep (OneOfDeepRequest) returns (NestedResponse);
}

message Top {
    string value = 1;
}

message NestedRequest {
    message Inner {
        string value = 1;
    }
    Top top = 1;
    Inner inner = 2;
}

message DeepRequest {
    message Outer {
        message Middle {
            message Inner {
                string value = 1;
            }
            Inner l2 = 1;
        }
        Middle l1 = 1;
    }
    Outer l0 = 1;
}

message OneOfRequest {
    message First {
        string value = 1;
    }
    message Second {
        string value = 1;
    }
    message Third {
        string value = 1;
    }
    oneof choose {
        First option1 = 1;
        Second option2 = 2;
        Third option3 = 3;
    }
}

message OneOfDeepRequest {
    message Outer {
        message Middle {
            message Inner {
                message First {
                    string value = 1;
                }
                message Second {
                    string value = 1;
                }
                message Third {
                    string value = 1;
                }
                oneof choose {
                    First option1 = 1;
                    Second option2 = 2;
                    Third option3 = 3;
                }
            }
            Inner l2 = 1;
        }
        message First {
            Middle l1 = 1;
        }
        message Second {
            Middle l1 = 1;
        }
        message Third {
            Middle l1 = 1;
        }
        oneof choose {
            First option1 = 1;
            Second option2 = 2;
            Third option3 = 3;
        }
    }
    Outer l0 = 1;
}

message NestedResponse {
    string return = 1;
}
